// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Page should compile 1`] = `
<login-form
  form={[Function FormGroup]}
  submitted={[Function EventEmitter]}
>
  
      <div
    _ngcontent-c0=""
  >
    
        
    <div
      _ngcontent-c0=""
    >
      Login
    </div>
    
        
    <div
      _ngcontent-c0=""
    >
      
          
      <form
        _ngcontent-c0=""
        class="ng-untouched ng-pristine ng-valid"
        ng-reflect-form="[object Object]"
        novalidate=""
      >
        
            
        <p
          _ngcontent-c0=""
        >
          
              
          <div
            _ngcontent-c0=""
          >
            
                
            <input
              _ngcontent-c0=""
              class="ng-untouched ng-pristine ng-valid"
              formcontrolname="username"
              matinput=""
              ng-reflect-name="username"
              placeholder="Username"
              type="text"
            />
            
              
          </div>
          
            
        </p>
        
  
            
        <p
          _ngcontent-c0=""
        >
          
              
          <div
            _ngcontent-c0=""
          >
            
                
            <input
              _ngcontent-c0=""
              class="ng-untouched ng-pristine ng-valid"
              formcontrolname="password"
              matinput=""
              ng-reflect-name="password"
              placeholder="Password"
              type="password"
            />
            
              
          </div>
          
            
        </p>
        
  
            
        
        
  
            
        <p
          _ngcontent-c0=""
          class="loginButtons"
        >
          
              
          <button
            _ngcontent-c0=""
            mat-button=""
            type="submit"
          >
            Login
          </button>
          
            
        </p>
        
  
          
      </form>
      
        
    </div>
    
      
  </div>
    
</login-form>
`;

exports[`Login Page should disable the form if pending 1`] = `
<login-form
  form={[Function FormGroup]}
  submitted={[Function EventEmitter]}
>
  
      <div
    _ngcontent-c1=""
  >
    
        
    <div
      _ngcontent-c1=""
    >
      Login
    </div>
    
        
    <div
      _ngcontent-c1=""
    >
      
          
      <form
        _ngcontent-c1=""
        class="ng-untouched ng-pristine"
        ng-reflect-form="[object Object]"
        novalidate=""
      >
        
            
        <p
          _ngcontent-c1=""
        >
          
              
          <div
            _ngcontent-c1=""
          >
            
                
            <input
              _ngcontent-c1=""
              class="ng-untouched ng-pristine"
              disabled=""
              formcontrolname="username"
              matinput=""
              ng-reflect-name="username"
              placeholder="Username"
              type="text"
            />
            
              
          </div>
          
            
        </p>
        
  
            
        <p
          _ngcontent-c1=""
        >
          
              
          <div
            _ngcontent-c1=""
          >
            
                
            <input
              _ngcontent-c1=""
              class="ng-untouched ng-pristine"
              disabled=""
              formcontrolname="password"
              matinput=""
              ng-reflect-name="password"
              placeholder="Password"
              type="password"
            />
            
              
          </div>
          
            
        </p>
        
  
            
        
        
  
            
        <p
          _ngcontent-c1=""
          class="loginButtons"
        >
          
              
          <button
            _ngcontent-c1=""
            mat-button=""
            type="submit"
          >
            Login
          </button>
          
            
        </p>
        
  
          
      </form>
      
        
    </div>
    
      
  </div>
    
</login-form>
`;

exports[`Login Page should display an error message if provided 1`] = `
<login-form
  errorMessage={[Function String]}
  form={[Function FormGroup]}
  submitted={[Function EventEmitter]}
>
  
      <div
    _ngcontent-c2=""
  >
    
        
    <div
      _ngcontent-c2=""
    >
      Login
    </div>
    
        
    <div
      _ngcontent-c2=""
    >
      
          
      <form
        _ngcontent-c2=""
        class="ng-untouched ng-pristine ng-valid"
        ng-reflect-form="[object Object]"
        novalidate=""
      >
        
            
        <p
          _ngcontent-c2=""
        >
          
              
          <div
            _ngcontent-c2=""
          >
            
                
            <input
              _ngcontent-c2=""
              class="ng-untouched ng-pristine ng-valid"
              formcontrolname="username"
              matinput=""
              ng-reflect-name="username"
              placeholder="Username"
              type="text"
            />
            
              
          </div>
          
            
        </p>
        
  
            
        <p
          _ngcontent-c2=""
        >
          
              
          <div
            _ngcontent-c2=""
          >
            
                
            <input
              _ngcontent-c2=""
              class="ng-untouched ng-pristine ng-valid"
              formcontrolname="password"
              matinput=""
              ng-reflect-name="password"
              placeholder="Password"
              type="password"
            />
            
              
          </div>
          
            
        </p>
        
  
            
        
        <p
          _ngcontent-c2=""
          class="loginError"
        >
          
              Invalid credentials
            
        </p>
        
  
            
        <p
          _ngcontent-c2=""
          class="loginButtons"
        >
          
              
          <button
            _ngcontent-c2=""
            mat-button=""
            type="submit"
          >
            Login
          </button>
          
            
        </p>
        
  
          
      </form>
      
        
    </div>
    
      
  </div>
    
</login-form>
`;
